[gd_scene load_steps=8 format=3 uid="uid://de56lwhpalp6i"]

[ext_resource type="Script" path="res://character_body_3d.gd" id="1_1qajl"]
[ext_resource type="PackedScene" uid="uid://vlx4rrwy2kaf" path="res://WaterGun.tscn" id="2_jnh7p"]
<<<<<<< HEAD
[ext_resource type="PackedScene" uid="uid://cv44yiq3rokxt" path="res://Shovel.tscn" id="3_76clc"]
[ext_resource type="Texture2D" uid="uid://be5b8iy3u5320" path="res://Melee Weapons/Untitled design (6).png" id="3_v2hhm"]
=======

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0l4ar"]
radius = 0.499585
height = 1.24402
>>>>>>> 8555200d31c2972d2b9e081da04af50e5b341800

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_x68qc"]
height = 1.88505

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_14v3e"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_dgk81"]
material = SubResource("StandardMaterial3D_14v3e")

[node name="player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0462, 0)
script = ExtResource("1_1qajl")

[node name="crouching_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.377854, 0)
shape = SubResource("CapsuleShape3D_0l4ar")
disabled = true

[node name="standing_collision_shape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_x68qc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="standing_collision_shape"]
mesh = SubResource("CapsuleMesh_dgk81")

[node name="neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera" type="Camera3D" parent="neck"]
current = true

<<<<<<< HEAD
[node name="Watergun" parent="CharacterBody3D/neck/Camera" instance=ExtResource("2_jnh7p")]
transform = Transform3D(0.997125, 0.00130278, 0.0757612, 0.000809254, 0.999612, -0.0278401, -0.075768, 0.0278214, 0.996737, 0.528822, -0.189524, -0.56639)

[node name="Melee" parent="CharacterBody3D/neck/Camera" instance=ExtResource("3_76clc")]
transform = Transform3D(2.18557e-08, -1.91069e-15, -0.5, -4.37114e-08, -0.5, 0, -0.5, 4.37114e-08, -2.18557e-08, 1.02999, -0.241559, -0.725581)

[node name="TextureRect" type="TextureRect" parent="CharacterBody3D"]
=======
[node name="TextureRect" type="TextureRect" parent="neck/Camera"]
>>>>>>> 8555200d31c2972d2b9e081da04af50e5b341800
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Watergun" parent="neck/Camera" instance=ExtResource("2_jnh7p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.473792, -0.225217, -0.581942)

[node name="head_clearance" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.233632, 0)
target_position = Vector3(0, 0.75, 0)
collide_with_areas = true
debug_shape_custom_color = Color(0.988235, 0, 0, 1)
